<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_weekly_exercice"
        android:orderInCategory="100"
        android:title="@string/weekly_exercice"/>
    <item
        android:id="@+id/action_specific_exercice"
        android:orderInCategory="100"
        android:title="@string/specific_exercice"/>
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/achievements"/>
    <item
        android:id="@+id/action_split_count"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/split_count"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"/>

    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/faq"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>


</menu>